+ insiders und logging

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,11 +9,12 @@ services:
     container_name: teams
     environment:
       - DISPLAY=$DISPLAY
-      - TEAMS_USERNAME=user1
+#      - TEAMS_USERNAME=user1
 #      - TEAMS_UID=3001           # default= 1000
 #      - TEAMS_GID=4001           # default= 1000
 #      - TEAMS_TIMEZONE=Etc/UTC   # default= Europe/Berlin
 #      - TEAMS_LOCALE=en_US.UTF-8 # default= de_DE.UTF-8
+#      - TEAMS_INSIDERS=false
     volumes:
       - /tmp/.X11-unix:/tmp/.X11-unix
       - /home/user1/alternativHome/teams/:/home
@@ -24,6 +25,7 @@ services:
 #    devices:
 #      - /dev/snd:/dev/snd
     privileged: true
+#    command: --debug
 
 
 
